Added: auth, common, interceptors, middlewares & users folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
-      "~/*": ["src/*"]
+      "@app/*": ["src/*"],
+      "@test/*": ["test/*"]
     },
     "incremental": true,
     "skipLibCheck": true,
